<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mDetailFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:title="@string/detail"
        app:titleTextColor="?attr/colorOnPrimary"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ImageView
        android:id="@+id/poster_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/poster"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@color/yellow"
        android:layout_width="150dp"
        app:layout_constraintDimensionRatio="3:4"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="@+id/poster_image" />
    <TextView
        android:id="@+id/year_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/year"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/genre_text"
        android:text="@string/genre"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/year_text"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/rating_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/rating"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintTop_toBottomOf="@id/genre_text"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/rating_text"
        android:text="@string/rating"
        app:layout_constraintTop_toTopOf="@id/rating_img"
        app:layout_constraintStart_toEndOf="@id/rating_img"
        app:layout_constraintBottom_toBottomOf="@id/rating_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/poster_image"
        android:id="@+id/desc_text"
        android:padding="16dp"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>